--- a/packages/cli/test/functional/test_site_convert/test_basic_convert/non_markbind_site/stylesheets/main.css
+++ b/packages/cli/test/functional/test_site_convert/test_basic_convert/non_markbind_site/stylesheets/main.css
@@ -56,7 +56,8 @@ mark {
     margin: 0 auto;
     min-width: 0;
     max-width: 1000px;
-    padding: 0.8rem 20px 0 20px;
+    padding: 0 20px;
+    margin-top: 0.8rem;
     transition: 0.4s;
     -webkit-transition: 0.4s;
 }
@@ -66,7 +67,6 @@ mark {
     position: sticky;
     top: 0;
     flex: 0 0 auto;
-    padding-top: 1rem;
     max-width: 300px;
     width: 300px;
 }
