--- a/packages/core-web/src/styles/markbind.css
+++ b/packages/core-web/src/styles/markbind.css
@@ -145,7 +145,7 @@ span.anchor {
     top: calc(-1 * var(--header-height) - 1rem);
 }
 
-.nav-menu-open {
+header[fixed] .nav-menu-open {
     max-height: calc(-1 * var(--header-height) + 100% + 50px);
 }
 
