Use css variables for fixed header style updates (#1928)

--- a/packages/core-web/src/styles/markbind.css
+++ b/packages/core-web/src/styles/markbind.css
@@ -1,3 +1,7 @@
+:root {
+    --header-height: 0;
+}
+
 a {
     text-decoration: none;
 }
@@ -134,6 +138,19 @@ header[fixed] {
 header[fixed].hide-header {
     max-height: 0;
     transition: max-height 0.6s ease-out;
+}
+
+span.anchor {
+    position: relative;
+    top: calc(-1 * var(--header-height) - 1rem);
+}
+
+header[fixed] .nav-menu-open {
+    max-height: calc(-1 * var(--header-height) + 100% + 50px);
+}
+
+.fixed-header-padding {
+    padding-top: var(--header-height) !important;
 }
 
 /* #app is treated as the main container */
