--- a/packages/core-web/src/styles/markbind.css
+++ b/packages/core-web/src/styles/markbind.css
@@ -127,17 +127,17 @@ code.hljs.inline {
 
 /* Header */
 
-header[fixed] {
-    max-height: 100%;
-    position: fixed;
-    transition: max-height 0.6s ease-in;
+header[sticky] {
+    position: sticky;
+    top: 0;
+    transition: transform 0.6s ease-in;
     width: 100%;
     z-index: 1001;
 }
 
-header[fixed].hide-header {
-    max-height: 0;
-    transition: max-height 0.6s ease-out;
+header[sticky].hide-header {
+    transform: translateY(calc(-1 * var(--header-height)));
+    transition: transform 0.6s ease-out;
 }
 
 span.anchor {
@@ -145,12 +145,8 @@ span.anchor {
     top: calc(-1 * var(--header-height) - 1rem);
 }
 
-header[fixed] .nav-menu-open {
+header[sticky] .nav-menu-open {
     max-height: calc(-1 * var(--header-height) + 100% + 50px);
-}
-
-.fixed-header-padding {
-    padding-top: var(--header-height) !important;
 }
 
 /* #app is treated as the main container */
