--- a/packages/core-web/src/styles/markbind.css
+++ b/packages/core-web/src/styles/markbind.css
@@ -1,5 +1,7 @@
 :root {
     --header-height: 0;
+    --header-padding: 0;
+    --header-position: 'static';
 }
 
 a {
@@ -128,8 +130,9 @@ code.hljs.inline {
 /* Header */
 
 header[fixed] {
+    position: var(--header-position);
+    top: 0;
     max-height: 100%;
-    position: fixed;
     transition: max-height 0.6s ease-in;
     width: 100%;
     z-index: 1001;
@@ -149,8 +152,14 @@ header[fixed] .nav-menu-open {
     max-height: calc(-1 * var(--header-height) + 100% + 50px);
 }
 
+/*
+  Prevent sudden quick movement of page content with the dynamically fixed header.
+  The padding-top property is set dynamically according to the header height in index.js.
+  (see https://www.w3schools.com/howto/howto_js_sticky_header.asp)
+*/
 .fixed-header-padding {
-    padding-top: var(--header-height) !important;
+    padding-top: var(--header-padding) !important;
+    transition: padding-top 0s linear !important;
 }
 
 /* #app is treated as the main container */
