--- a/packages/cli/test/functional/test_site/stylesheets/styles.css
+++ b/packages/cli/test/functional/test_site/stylesheets/styles.css
@@ -65,7 +65,7 @@ mark {
 #site-nav,
 #page-nav {
     position: sticky;
-    top: 0;
+    top: var(--sticky-header-height);
     flex: 0 0 auto;
     max-width: 300px;
     width: 300px;
