--- a/packages/core/template/default/stylesheets/main.css
+++ b/packages/core/template/default/stylesheets/main.css
@@ -64,20 +64,20 @@ mark {
 
 #site-nav,
 #page-nav {
+    display: flex;
+    flex-direction: column;
     position: sticky;
     top: var(--sticky-header-height);
     flex: 0 0 auto;
     max-width: 300px;
+    max-height: calc(100vh - var(--sticky-header-height));
     width: 300px;
 }
 
 #site-nav {
-    display: flex;
-    flex-direction: column;
     border-right: 1px solid lightgrey;
     padding-bottom: 20px;
     z-index: 999;
-    max-height: 100vh;
 }
 
 .site-nav-top {
@@ -90,13 +90,7 @@ mark {
 }
 
 #page-nav {
-    display: block;
     border-left: 1px solid lightgrey;
-    max-height: 90vh;
-}
-
-#page-nav .nav-component {
-    max-height: 90vh;
 }
 
 @media screen and (max-width: 1299.98px) {
