Update wrap and copy button to be visible on hover (#1949)

--- a/packages/core-web/src/styles/markbind.css
+++ b/packages/core-web/src/styles/markbind.css
@@ -238,20 +238,26 @@ pre {
     display: flex;
 }
 
-.function-btn-container {
-    display: grid;
-    height: max-content;
-}
-
 button.function-btn {
-    border: none;
-    background-color: transparent;
+    border: 1px solid #d7dadc;
+    border-radius: 5px;
     color: darkgray;
     cursor: pointer;
-    display: inline-block;
+    display: none;
+    margin: 0.17rem;
     padding: 0.35rem;
+    position: absolute;
+    right: 0;
     text-align: center;
     white-space: nowrap;
+}
+
+button.function-btn + button.function-btn {
+    right: 36px;
+}
+
+pre:hover > .function-btn-container > button.function-btn {
+    display: block;
 }
 
 .function-btn:hover {
