--- a/packages/core-web/src/styles/markbind.css
+++ b/packages/core-web/src/styles/markbind.css
@@ -324,21 +324,16 @@ h6 {
     margin-bottom: 1rem;
 }
 
+.block-embed {
+    overflow-x: auto;
+    position: relative;
+    width: 100%;
+}
+
 .block-embed iframe {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-}
-
-.block-embed-service-powerpoint {
-    padding-bottom: 75%;
-}
-
-@media screen and (max-width: 350px) {
-    .block-embed-service-powerpoint {
-        padding-bottom: 100%;
-        min-width: 350px;
-    }
 }
