Fix embed scaling issues (#1797)
- All embeds save for ppt are scaled to 100% container width
- Ppt embeds are kept as is for usability (see PR discussion)

--- a/packages/core-web/src/styles/markbind.css
+++ b/packages/core-web/src/styles/markbind.css
@@ -337,3 +337,17 @@ h5,
 h6 {
     margin-bottom: 1rem;
 }
+
+.block-embed {
+    overflow-x: auto;
+    position: relative;
+    width: 100%;
+}
+
+.block-embed iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
