--- a/docs/njk/common.njk
+++ b/docs/njk/common.njk
@@ -10,8 +10,12 @@
 <br>
 {% endmacro %}
 
-{% macro embed(heading, src) %}
+{% macro embed(heading, src, omit_front_matter) %}
 <panel type="seamless" header="{{ icon_embedding }} {{ heading }}" minimized>
+{% if omit_front_matter %}
+<include src="{{ src }}" omitFrontmatter />
+{% else %}
 <include src="{{ src }}" />
+{% endif %}
 </panel>
 {% endmacro %}
