--- a/docs/njk/common.njk
+++ b/docs/njk/common.njk
@@ -10,8 +10,8 @@
 <br>
 {% endmacro %}
 
-{% macro embed(heading, src, omit_front_matter) %}
+{% macro embed(heading, src, omit_frontmatter) %}
 <panel type="seamless" header="{{ icon_embedding }} {{ heading }}" minimized>
-<include src="{{ src }}" {% if omit_front_matter %} omitFrontmatter {% endif %} />
+<include src="{{ src }}" {% if omit_frontmatter %} omitFrontmatter {% endif %} />
 </panel>
 {% endmacro %}
