--- a/packages/core-web/src/styles/markbind.css
+++ b/packages/core-web/src/styles/markbind.css
@@ -1,6 +1,5 @@
 :root {
     --sticky-header-height: 0;
-    --navbar-height: 56px;
 }
 
 a {
@@ -369,7 +368,7 @@ h4,
 h5,
 h6 {
     margin-bottom: 1rem;
-    scroll-margin-top: var(--navbar-height);
+    scroll-margin-top: var(--sticky-header-height);
 }
 
 .block-embed {
