--- a/packages/core/src/plugins/web3FormAssets/web-3-form.css
+++ b/packages/core/src/plugins/web3FormAssets/web-3-form.css
@@ -1,17 +1,18 @@
 .form-container {
     border-radius: 5px;
-    background-color: #00B0F0;
+    background-color: #00b0f0;
     padding: 20px;
 }
 
-input[type=text], input[type = email], select, textarea {
-    width: 100%; /* Full width */
-    padding: 12px; /* Some padding */
-    border: 1px solid #ccc; /* Gray border */
-    border-radius: 4px; /* Rounded borders */
-    box-sizing: border-box; /* Make sure that padding and width stays in place */
-    margin-top: 6px; /* Add a top margin */
-    margin-bottom: 16px; /* Bottom margin */
-    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+input,
+select,
+textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical
 }
-
