Fix styling issue

--- a/packages/cli/test/functional/test_site/expected/plugins/web3Form/web-3-form.css
+++ b/packages/cli/test/functional/test_site/expected/plugins/web3Form/web-3-form.css
@@ -14,5 +14,5 @@ textarea {
     box-sizing: border-box;
     margin-top: 6px;
     margin-bottom: 16px;
-    resize: vertical
+    resize: vertical;
 }
