--- a/packages/core/src/plugins/web3FormAssets/web-3-form.css
+++ b/packages/core/src/plugins/web3FormAssets/web-3-form.css
@@ -14,5 +14,5 @@ textarea {
     box-sizing: border-box;
     margin-top: 6px;
     margin-bottom: 16px;
-    resize: vertical
+    resize: vertical;
 }
