--- a/packages/core/src/Page/page.njk
+++ b/packages/core/src/Page/page.njk
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="generator" content="{{ markBindVersion }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ title }}</title>
+    {%- if title -%} <title>{{ title }}</title> {%- endif -%}
     <link rel="stylesheet" href="{{ asset.bootstrap }}">
     <link rel="stylesheet" href="{{ asset.fontAwesome }}">
     <link rel="stylesheet" href="{{ asset.glyphicons }}">
