--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -81,7 +81,8 @@ mark {
 }
 
 .site-nav-top {
-    padding: 0.7rem 0 0.5rem 0.8rem;
+    margin: 0.8rem 0;
+    padding: 0 12px 12px 12px;
 }
 
 .nav-component {
