Change css selectors to be more specific

--- a/packages/cli/test/functional/test_site/expected/plugins/web3Form/web-3-form.css
+++ b/packages/cli/test/functional/test_site/expected/plugins/web3Form/web-3-form.css
@@ -1,6 +1,6 @@
-input,
-select,
-textarea {
+.web3Form input,
+.web3Form select,
+.web3Form textarea {
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
