--- a/packages/core/src/Site/siteConvertLayout.njk
+++ b/packages/core/src/Site/siteConvertLayout.njk
@@ -20,7 +20,7 @@
 <div id="flex-body">
   <nav id="site-nav">
     <div class="site-nav-top">
-      <div class="fw-bold mb-2" style="font-size: 1.25rem;">Template</div>
+      <div class="fw-bold mb-2" style="font-size: 1.25rem;">Contents</div>
     </div>
     <div class="nav-component slim-scroll">
       <site-nav>
