Update functional test

--- a/packages/core/src/Site/defaultLayout.njk
+++ b/packages/core/src/Site/defaultLayout.njk
@@ -34,7 +34,7 @@
   * [Topic 3a]({{baseUrl}}/contents/topic3a.html)
   * [Topic 3b]({{baseUrl}}/contents/topic3b.html)
 {%- endset -%}
-{{ defaultSiteNav + '\n' + siteNav if siteNav else defaultSiteNav}}
+{{ defaultSiteNav + siteNav if siteNav else defaultSiteNav}}
       </site-nav>
     </div>
   </nav>
