Change default icon for conversion

--- a/packages/core/src/Site/siteConvertLayout.njk
+++ b/packages/core/src/Site/siteConvertLayout.njk
@@ -5,7 +5,7 @@
 <header sticky>
   <navbar placement="top" type="dark">
     <a slot="brand" href="{% raw %}{{baseUrl}}{% endraw %}/index.html" title="Home" class="navbar-brand">
-      <i class="far fa-file-image"></i>
+      <i class="far fa-house"></i>
     </a>
     <li><a href="{% raw %}{{baseUrl}}{% endraw %}/index.html" class="nav-link">HOME</a></li>
     <li><a href="{% raw %}{{baseUrl}}{% endraw %}/about.html" class="nav-link">ABOUT</a></li>
