Migrate stylelint to latest version ^16.0.0 Add dependency "stylelint-config-recommended-vue" Fix syntax to obey new rules

--- a/packages/cli/test/functional/test_site/expected/plugins/web3Form/web-3-form.css
+++ b/packages/cli/test/functional/test_site/expected/plugins/web3Form/web-3-form.css
@@ -1,6 +1,6 @@
-.web3Form input,
-.web3Form select,
-.web3Form textarea {
+.web-3-form input,
+.web-3-form select,
+.web-3-form textarea {
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
