--- a/packages/core-web/src/styles/index.css
+++ b/packages/core-web/src/styles/index.css
@@ -1,4 +1,4 @@
-@import "markbind.css";
-@import "page-nav.css";
-@import "~katex/dist/katex.css";
-@import "~markdown-it-texmath/css/texmath.css";
+@import url("markbind.css");
+@import url("page-nav.css");
+@import url("~katex/dist/katex.css");
+@import url("~markdown-it-texmath/css/texmath.css");
