--- a/packages/core-web/src/styles/markbind.css
+++ b/packages/core-web/src/styles/markbind.css
@@ -27,8 +27,7 @@ pre.hljs > code {
     background: none;
 }
 
-pre > code.hljs {
-    -webkit-background-clip: padding-box; /* for Safari */
+pre > code.hljs { /* for Safari */
     background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
     border-radius: 5px;
     counter-reset: line;
@@ -208,7 +207,7 @@ footer {
 }
 
 /* Bootstrap small(sm) responsive breakpoint */
-@media (max-width: 767.98px) {
+@media (width <= 767.98px) {
     .dropdown-menu > li > a {
         white-space: normal;
     }
@@ -252,12 +251,12 @@ li.footnote-item:target {
 
 /* styles for triggers and tooltips */
 .trigger {
-    border-bottom: 1px dotted currentColor;
+    border-bottom: 1px dotted currentcolor;
 }
 
 .trigger-click {
     cursor: pointer;
-    border-bottom: 1px dashed currentColor;
+    border-bottom: 1px dashed currentcolor;
 }
 
 .trigger-click:focus {
@@ -303,7 +302,7 @@ pre:hover > .function-btn-container > button.function-btn {
 }
 
 .function-btn svg {
-    fill: currentColor;
+    fill: currentcolor;
 }
 
 /* Wrap class used for "wrap text" button. */
@@ -320,7 +319,7 @@ code.wrap {
 
 /* styles for <hr> */
 hr {
-    border-top: solid 1px rgb(0, 0, 0, 0.1);
+    border-top: solid 1px rgb(0 0 0 / 10%);
     background-color: transparent;
     opacity: 1;
 }
