--- a/packages/core-web/src/styles/markbind.css
+++ b/packages/core-web/src/styles/markbind.css
@@ -66,18 +66,41 @@ pre > code.hljs[heading] {
 
 /* switch to light style on print view */
 @media print {
-    pre > code.hljs,
-    code.hljs.inline {
-        background: ghostwhite;
-        color: #333;
+    pre > code.hljs {
+        white-space: pre-wrap;
+        word-wrap: break-word;
     }
 
     code.hljs.inline {
+        background: ghostwhite;
+        color: #333;
         border: 0.5px solid #d4d4d4;
     }
 
     code span.highlighted {
         background: lavender;
+    }
+
+    .hljs:not(.inline).line-numbers > span {
+        padding: 0 0.5em 0 3.5em;
+        position: relative;
+    }
+
+    /* display line numbers beside each span */
+    .hljs:not(.inline).line-numbers > span::before {
+        border-right: 1px solid #ddd;
+        display: inline-block;
+        color: #888;
+        content: counter(line);
+        counter-increment: line;
+        left: 0;
+        margin-right: 0.5em;
+        padding-right: 0.5em;
+        position: absolute;
+        text-align: right;
+        top: 0;
+        width: 3em;
+        height: 100%;
     }
 }
 
