--- a/packages/core-web/src/styles/markbind.css
+++ b/packages/core-web/src/styles/markbind.css
@@ -81,13 +81,13 @@ pre > code.hljs[heading] {
         background: lavender;
     }
 
-    .hljs:not(.inline).line-numbers > span {
+    .hljs:not(.inline).line-numbers-print > span {
         padding: 0 0.5em 0 3.5em;
         position: relative;
     }
 
     /* display line numbers beside each span */
-    .hljs:not(.inline).line-numbers > span::before {
+    .hljs:not(.inline).line-numbers-print > span::before {
         border-right: 1px solid #ddd;
         display: inline-block;
         color: #888;
