--- a/packages/core-web/src/styles/markbind.css
+++ b/packages/core-web/src/styles/markbind.css
@@ -65,6 +65,36 @@ pre > code.hljs[heading] {
     display: block;
 }
 
+@media print {
+    pre > code.hljs {
+        white-space: pre-wrap;
+        word-wrap: break-word;
+        word-break: break-all;
+    }
+
+    .hljs:not(.inline).line-numbers-print > span {
+        padding: 0 0.5em 0 3.5em;
+        position: relative;
+    }
+
+    /* display line numbers beside each span */
+    .hljs:not(.inline).line-numbers-print > span::before {
+        border-right: 1px solid #ddd;
+        display: inline-block;
+        color: #888;
+        content: counter(line);
+        counter-increment: line;
+        left: 0;
+        margin-right: 0.5em;
+        padding-right: 0.5em;
+        position: absolute;
+        text-align: right;
+        top: 0;
+        width: 3em;
+        height: 100%;
+    }
+}
+
 kbd {
     background-color: #fafbfc;
     border: 1px solid #c6cbd1;
