implement changes to force code highlight

--- a/packages/core-web/src/styles/markbind.css
+++ b/packages/core-web/src/styles/markbind.css
@@ -29,7 +29,7 @@ pre.hljs > code {
     background: none;
 }
 
-pre > code.hljs { 
+pre > code.hljs {
     background-clip: padding-box;
     border-radius: 5px;
     counter-reset: line;
@@ -92,6 +92,12 @@ pre > code.hljs[heading] {
         top: 0;
         width: 3em;
         height: 100%;
+    }
+
+    /* force printing the highlighting colour */
+    .hljs span.highlighted{
+        -webkit-print-color-adjust:exact;
+        background:#e6e6fa !important;
     }
 }
 
