--- a/packages/core/src/Page/page.njk
+++ b/packages/core/src/Page/page.njk
@@ -18,10 +18,10 @@
     {% if asset.materialIcons %} <link rel="stylesheet" href="{{ asset.materialIcons }}"> {%- endif -%}
     <link rel="stylesheet" href="{{ asset.highlight }}">
     {%- if not dev -%}<link rel="stylesheet" href="{{ asset.markBindCss }}">{%- endif -%}
-    <script src="{{ asset.polyfillJs }}"></script>
-    <script src="{{ asset.vue }}"></script>
-    <script src="{{ asset.markBindJs }}"></script>
-    <script src="{{ asset.pageVueRenderJs }}"></script>
+    <script src="{{ asset.polyfillJs }}" defer></script>
+    <script src="{{ asset.vue }}" defer></script>
+    <script src="{{ asset.markBindJs }}" defer></script>
+    <script src="{{ asset.pageVueRenderJs }}" defer></script>
     {%- if asset.pluginLinks -%}
     {%- for link in asset.pluginLinks -%}
         {{ link }}
