Change usage of render to template in createSSRApp
Simplify entire SSR without compromising SSR.

--- a/packages/core/src/Page/page.njk
+++ b/packages/core/src/Page/page.njk
@@ -43,7 +43,7 @@
 <script src="{{ asset.polyfillJs }}"></script>
 <script src="{{ asset.vue }}"></script>
 <script src="{{ asset.markBindJs }}"></script>
-<script type="module" src="{{ asset.pageVueRenderJs }}"></script>
+<script src="{{ asset.pageContent }}"></script>
 <script>
   {% if enableSearch %}MarkBind.setupWithSearch(){% else %}MarkBind.setup(){% endif %}
 </script>
