Update mermaid to use MutationObserver

--- a/packages/core-web/src/styles/markbind.css
+++ b/packages/core-web/src/styles/markbind.css
@@ -285,7 +285,7 @@ li.footnote-item:target {
 }
 
 /* "Copy" and "wrap text" code block buttons */
-pre {
+pre:has(.function-btn-container) {
     position: relative;
     display: flex;
 }
