--- a/packages/core/src/plugins/codeBlockButtonsAssets/codeBlockButtons.css
+++ b/packages/core/src/plugins/codeBlockButtonsAssets/codeBlockButtons.css
@@ -66,7 +66,7 @@ code.wrap {
     background-color: black;
     color: #fff;
     text-align: center;
-    padding: 5px 5px 5px 5px;
+    padding: 5px;
     border-radius: 6px;
     font-size: 12px;
     cursor: default;
