--- a/docs/userGuide/syntax/fullSyntaxSet.njk
+++ b/docs/userGuide/syntax/fullSyntaxSet.njk
@@ -28,6 +28,7 @@
   boxes : ['Boxes', 'boxes', ['presentation', 'reader-facing']],
   panels : ['Panels', 'panels', ['presentation', 'reader-facing']],
   tabs : ['Tabs', 'tabs', ['presentation', 'reader-facing']],
+  cardstacks: ['CardStacks', 'cardstacks', ['presentation', 'reader-facing']],
   pictures : ['Pictures', 'pictures', ['images-diagrams', 'reader-facing']],
   annotations : ['Annotations', 'annotations', ['images-diagrams', 'reader-facing']],
   thumbnails : ['Thumbnails', 'thumbnails', ['images-diagrams', 'reader-facing']],
