Add ui changes to wrap button
1. Added visual changes to wrap button on activate and deactivate to
denote that the code is wrapped.
2. Updated wrap button tooltip on activate and deactivate.

--- a/packages/core/src/plugins/codeBlockButtonsAssets/codeBlockButtons.css
+++ b/packages/core/src/plugins/codeBlockButtonsAssets/codeBlockButtons.css
@@ -21,6 +21,10 @@ button.function-btn {
     white-space: nowrap;
 }
 
+pre:has(.hljs.wrap) .wrap-button {
+    background-color: rgb(229 229 229);
+}
+
 button.function-btn + button.function-btn {
     right: 36px;
 }
